--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -5,6 +5,20 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<h1>Olá Mundo!</h1>
+	<h1>Olá Mundo!</h1
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th th:text="#{msgs.headers.name}">Name</th>
+				<th th:text="#{msgs.headers.price}">Price</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="prod: ${allProducts}">
+				<td th:text="${prod.name}">Oranges</td>
+				<td th:text="${#numbers.formatDecimal(prod.price, 1, 2)}">0.99</td>
+			</tr>
+		</tbody>
+	</table>
 </body>
 </html>
