--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+	<meta charset="utf-8">
+	<title>Modelo</title>
+
+	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
+	<link rel="stylesheet" href="assets/css/bootstrap-theme.min.css">
+	<script src="assets/js/jquery-3.1.1.min.js"></script>
+	<script src="assets/js/bootstrap.min.js"></script>
 </head>
 <body>
-	<h1>Olá Mundo!</h1
-	<table class="table table-striped">
+	<h1>OlÃ¡ Mundo!</h1
+	<table class="table">
 		<thead>
 			<tr>
 				<th th:text="#{msgs.headers.name}">Name</th>
