--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=home.jsf" />
+<meta http-equiv="refresh" content="0; url=api/home" />
 </head>
 <body>
 </body>
